# iterm-controller

./: PLAN.md  PRD.md  PROBLEM.md  README.md  WALKTHROUGH.md  controller.py  install.sh  prompt.md  pyproject.toml  ralph_loop.sh  requirements.txt  simple_demo.py
docs/: API_REFERENCE.md  APP_SPEC.md  ARCHITECTURE.md  DATA_MODEL.md
iterm_controller/: __init__.py  __main__.py  api.py  app.py  auto_mode.py  config.py  editors.py  env_parser.py  exceptions.py  git_service.py  github.py  health_checker.py  iterm_api.py  logging_config.py  models.py  notifications.py  plan_parser.py  plan_watcher.py  ports.py  review_service.py  script_service.py  security.py  services.py  session_monitor.py  spec_validator.py  state.py  status_display.py  styles.tcss  task_dependency.py  templates.py  test_command_detector.py  test_output_parser.py  test_plan_parser.py  test_plan_watcher.py  window_layouts.py
specs/: README.md  app.md  auto-mode.md  config.md  docs-mode.md  git-service.md  github.md  health-checks.md  iterm.md  mission-control.md  models.md  notifications.md  plan-mode.md  plan-parser.md  review-service.md  scripts.md  session-monitor.md  test-mode.md  test-plan-parser.md  ui.md  work-mode.md  workflow-modes.md
tests/: __init__.py  test_active_work_widget.py  test_add_reference_modal.py  test_api.py  test_app.py  test_artifact_list_widget.py  test_artifact_preview_modal.py  test_auto_mode.py  test_auto_mode_config_modal.py  test_blocked_tasks_widget.py  test_cli.py  test_command_detector_test.py  test_config.py  test_control_room_screen.py  test_create_artifact_modal.py  test_dependency_chain_modal.py  test_doc_tree_widget.py  test_docs_picker_modal.py  test_docs_section_widget.py  test_document_crud.py  test_editors.py  test_env_parser.py  test_env_section_widget.py  test_github.py  (+59 more)
(+89 files in other folders)
