[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iterm-controller"
version = "0.1.0"
description = "A TUI control room for development projects using iTerm2"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Pete Stewart"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
]
keywords = ["iterm2", "terminal", "tui", "developer-tools"]
dependencies = [
    "textual>=2.0.0,<3.0.0",
    "iterm2>=2.0.0,<3.0.0",
    "dacite>=1.8.0,<2.0.0",
    "watchfiles>=0.21.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
iterm-controller = "iterm_controller.__main__:main"

[project.urls]
Homepage = "https://github.com/petestewart/iterm-controller"
Repository = "https://github.com/petestewart/iterm-controller"

[tool.setuptools.packages.find]
include = ["iterm_controller*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
